[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-boost"
version = "0.1.0"
description = "CLI utility for training boosting models with automated preprocessing."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Harshad", email = "harshad317@example.com" },
]
dependencies = [
  "pandas>=1.3",
  "numpy>=1.21",
  "scikit-learn>=1.0",
]

[project.optional-dependencies]
lightgbm = ["lightgbm>=3.3"]
xgboost = ["xgboost>=1.7"]
catboost = ["catboost>=1.0"]

[project.scripts]
auto-boost = "auto_boost.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.tests"]
